[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nost_tools"
description = "Tools for Novel Observing Strategies Testbed (NOS-T) Applications"
authors = [
    {"name" = "Paul T. Grogan", "email" = "paul.grogan@asu.edu"},
    {"name" = "Emmanuel M. Gonzalez", "email" = "emmanuelgonzalez@asu.edu"}
]
readme = "README.md"
requires-python =">=3.8" #">=3.11" # 
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "ntplib",
    "numpy",
    "pandas <= 2.2.2",
    "pydantic >= 2, < 3",
    "python-dateutil",
    "pika",
    "python-dotenv",
    "pyyaml",
    "python-keycloak"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "nost_tools.__version__"}

[project.optional-dependencies]
dev = [
    "black[jupyter] >= 24.2",
    "coverage",
    "pylint",
    "pylint-pydantic",
    "pytest"
]
examples = [
    "dash",
    "dash-daq",
    "flask",
    "python-dotenv",
    "scipy",
    "seaborn",
    "skyfield",
    "matplotlib >= 3.9",
    # "matplotlib <= 3.7",
    "numpy >= 1.26",
    # "numpy",
    "xarray >= 2023.6",
    # "xarray<=2023.1",
    "rioxarray >= 0.17",
    # "rioxarray <= 0.13",
    "geopandas >= 1.0",
    # "geopandas <= 0.13.2",
    "netCDF4 >= 1.6",
    "aiobotocore >= 2.17",
    "botocore >= 1.35",
    "boto3 >= 1.35",
    "tatc <= 3.4.3",
    "s3fs >= 2024.10.0",
    "pulp >= 2.9.0",
    "h5netcdf >= 1.5.0"
    # "h5netcdf <= 1.1"
]
docs = [
    "autodoc_pydantic >= 2",
    "docutils",
    "readthedocs-sphinx-search",
    "sphinx >= 7",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx_design",
    "myst-parser",
]
