[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nost_tools"
description = "Tools for Novel Observing Strategies Testbed (NOS-T) Applications"
authors = [
    {"name" = "Paul T. Grogan", "email" = "paul.grogan@asu.edu"},
    {"name" = "Emmanuel M. Gonzalez", "email" = "emmanuelgonzalez@asu.edu"}
]
readme = "README.md"
requires-python =">=3.9"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "ntplib",
    "numpy >= 2",
    "pandas >= 2",
    "pydantic >= 2, < 3",
    "python-dateutil",
    "pika >= 1",
    "python-dotenv",
    "pyyaml",
    "python-keycloak >= 5"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "nost_tools.__version__"}

[project.optional-dependencies]
dev = [
    "black[jupyter] >= 24.2",
    "coverage",
    "pylint",
    "pylint-pydantic",
    "pytest"
]
examples = [
    "dash",
    "dash-daq",
    "flask",
    "scipy",
    "seaborn",
    "skyfield",
    "matplotlib >= 3",
    "xarray >= 2023",
    "rioxarray >= 0.13",
    "geopandas >= 0.12",
    "netCDF4 >= 1.6",
    "aiobotocore >= 2.17",
    "botocore >= 1.35",
    "boto3 >= 1.35",
    "tatc <= 3.4.3",
    "s3fs >= 2024.10.0",
    "pulp >= 2.9.0",
    "h5netcdf >= 1.0"
]
docs = [
    "autodoc_pydantic >= 2",
    "docutils",
    "readthedocs-sphinx-search",
    "sphinx >= 7",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx_design",
    "myst-parser",
    "sphinxcontrib-mermaid",
]
