[metadata]
name = nost-tools
version = 1.0.0
author = Paul T. Grogan
author_email = pgrogan@stevens.edu
license = BSD 3-clause
license_file = LICENSE
description = Tools for New Observing Strategies Testbed (NOS-T) applications
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
  numpy==1.22.1
  pandas==1.3.5
  python-dateutil==2.8.2
  ntplib==0.4.0
  paho-mqtt==1.6.1
  pydantic==1.9.0
